[FIX] web: fixed handle widget visiblity
Currently, the table layout is fixed, so it is generating a problem for a width
of handle widget, changed it with auto so it will compute all width
automatically instead of fixed

before commit:
handle widget is not displaying for an editable list view.

after commit:
handle widget is showing as expected.

task- 2003535

--- a/addons/web/static/src/scss/list_view.scss
+++ b/addons/web/static/src/scss/list_view.scss
@@ -165,7 +165,7 @@
     //--------------------------------------------------------------------------
 
     &.o_editable_list {
-        table-layout: fixed;
+        table-layout: auto;
 
         .o_list_record_selector {
             width: 40px;
